<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card_bg1"
    tools:context=".BuyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center"
            android:src="@drawable/location_pin_svgrepo_com"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_pro"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:fontFamily="@font/allerta"
            android:textColor="@color/white"
            android:textSize="24sp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:id="@+id/species"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:orientation="horizontal">



            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/check_svgrepo_com__1_"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feature_one"
                android:textColor="@color/white"
                android:fontFamily="@font/allerta"
                android:layout_gravity="center"
                android:padding="@dimen/_4sdp"/>




        </LinearLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:orientation="horizontal">



            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/check_svgrepo_com__1_"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feature_two"
                android:textColor="@color/white"
                android:fontFamily="@font/allerta"
                android:layout_gravity="center"
                android:padding="@dimen/_4sdp"/>




        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:orientation="horizontal">



            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/check_svgrepo_com__1_"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feature_three"
                android:textColor="@color/white"
                android:fontFamily="@font/allerta"
                android:layout_gravity="center"
                android:padding="@dimen/_4sdp"/>




        </LinearLayout>





    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/species"
        android:id="@+id/types"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="vertical">


        <com.addisonelliott.segmentedbutton.SegmentedButtonGroup
            android:id="@+id/subsType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/_4sdp"
            android:elevation="@dimen/_1sdp"
            app:borderColor="@color/bg_screen2"
            app:borderWidth="@dimen/_1sdp"

            app:position="0"
            app:radius="@dimen/_20sdp"
            app:ripple="true"
            app:dividerWidth="@dimen/_1sdp"
            app:divider="@color/primary"
            app:rippleColor="@color/green_800"
            android:background="@color/white"
            app:selectedBackground="@color/dot_dark_screen2">


            <com.addisonelliott.segmentedbutton.SegmentedButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/allerta"
                android:padding="@dimen/_12sdp"
                android:id="@+id/typeOne"
                android:textAlignment="center"
                app:selectedTextColor="@color/white"
                app:text="@string/onevalue"
                app:textColor="@color/black" />


            <com.addisonelliott.segmentedbutton.SegmentedButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/allerta"
                android:padding="@dimen/_18sdp"
                android:id="@+id/typeTwo"
                android:textAlignment="center"

                app:selectedTextColor="@color/white"
                app:text="@string/twovalue"
                app:textColor="@color/black" />


        </com.addisonelliott.segmentedbutton.SegmentedButtonGroup>

    </LinearLayout>

    <Button
        android:id="@+id/continueBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/types"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/rect_button"
        android:fontFamily="@font/allerta"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/continu"
        android:textColor="@color/white"
        android:textSize="20sp" />





</RelativeLayout>